# Proyecto_seminario_API

./: Makefile  README.md  pyproject.toml  pyproyect.toml
0. RUBRICA/: PAUTAS-README.md
1. APP/: app.py
2. DATA/: Libro1.xlsx
5. SRC/API/: main.py
6. TESTS/: test_api_contract.py
7. STREAMLIT/: config.toml
APP/: app.py
NOTEBOOKS/: TRABAJO.ipynb  modelo_RFRegressor.ipynb
SRC/API/: __init__.py  main.py
TESTS/: test_api_contract.py  test_api_contracto.py
