[tool.poetry]
name = "proyecto-seminario-api"
version = "0.1.0"
description = "Proyecto final del seminario de programación API"
authors = ["Jose Dario Hernandez <tuemail@ejemplo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
streamlit = "^1.37.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
